# EngageX

./: .gitignore  README.md
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-frontend-build/: 01-frontend-build-01-PLAN.md  01-frontend-build-02-PLAN.md  01-frontend-build-02-SUMMARY.md  01-frontend-build-03-PLAN.md  01-frontend-build-03-SUMMARY.md  01-frontend-build-04-PLAN.md  01-frontend-build-04-SUMMARY.md  01-frontend-build-05-PLAN.md  01-frontend-build-05-SUMMARY.md  01-frontend-build-CONTEXT.md
AI_Services/: .env.example  .gitignore  Ingestion.py  README.md  main.py  pyproject.toml  requirements.txt
AI_Services/agents/: Ingestion.py  query.py
AI_Services/api/: ingestion_query_route.py
AI_Services/utils/: cache_session.py  chunk_and_embed.py  transcribe.py
AI_Services/workers/: ingestion_worker.py
Frontend/: index.html  package-lock.json  package.json  tailwind.config.js
Frontend/src/: App.jsx  index.css
Frontend/src/components/chat/: ChatInput.jsx  ChatPanel.jsx  CitationList.jsx  EngagementComparison.jsx  Header.jsx  MarkdownRenderer.jsx  MessageList.jsx  NewConversationButton.jsx  StreamingMessage.jsx  SuggestedQuestions.jsx  VideoCard.jsx
Frontend/src/components/landing/: IngestProgressIndicator.jsx  SessionRestorePrompt.jsx  UrlInputForm.jsx
Frontend/src/components/shared/: ErrorBanner.jsx  LoadingSpinner.jsx  RateLimitBadge.jsx
Frontend/src/lib/: utils.js
Frontend/src/pages/: Chat.jsx  Landing.jsx
Frontend/src/store/: api.js  useEngageStore.js
