[project]
name = "ai-services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq>=0.37.1",
    "langchain>=1.3.2",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.2",
    "pinecone-client>=6.0.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "slowapi>=0.1.9",
    "upstash-redis>=1.7.0",
    "uvicorn>=0.48.0",
    "websockets>=16.0",
    "youtube-transcript-api==0.6.3",
    "yt-dlp>=2026.3.17",
]
